# flow

./: .gitignore  AGENTS.md  ANIMATIONS.md  CHESS.md  CLI_ARGUMENTS.md  CLI_USAGE.md  CODEX.md  Cargo.toml  DX.md  FONT_COMPRESSION_REPORT.md  FREE.md  FREELANCER.md  HELP.md  HUMAN.md  LIST.md  LLM.md  LLM_SERIALIZER.md  LLM_SERIALIZER_ADVANCED.md  LLM_SERIALIZER_COUNT.md  LLM_SERIALIZER_TOOL_CALLING.md  MACHINE.md  MEDIA.md  ONBOARD.md  PERFORMANCE.md  QWEN_PERFORMANCE.md  README.md  SERIALIZER.md  SOUL.md  THEME.md  TODO.md  TOOD.md  TUI.md  VIDEO.md  YAZI.md  build.rs  debug_model.py  theme.css
chat-minimal/: Cargo.toml
chat-minimal/src/: app.rs  components.rs  effects.rs  input.rs  render.rs  splash.rs
font/: Cargo.toml
font/src/: figlet.rs  lib.rs
serializer/: Cargo.toml  FINAL_STATUS.md  FORMATTING_AND_CLEANUP.md
serializer-depricated/derive/: Cargo.toml
serializer-depricated/derive/src/: lib.rs
serializer/benches/: arena_benchmark.rs  arena_vs_rkyv.rs  brutal_truth.rs  dx_adaptive_vs_rkyv.rs  dx_machine_complete.rs  dx_machine_vs_rkyv.rs  dx_vs_rkyv_optimized.rs  dx_vs_rkyv_real.rs  dx_zero_bench.rs  machine_format_compression_comparison.rs  mmap_benchmark.rs  optimized_rkyv_test.rs  quick_comparison.rs  zstd_cache_roundtrip.rs
serializer/examples/: benchmark_vs_toon.rs  demo_all_converters.rs  dx_machine_batch.rs  format_comparison.rs  format_comparison_test.rs  leaf_inline_demo.rs  real_world_machine_test.rs  space_separator_test.rs  test_real.rs  token_theory_test.rs  verify_claims.rs
serializer/src/: binary_output.rs  compress.rs  encoder.rs  formatter.rs  lib.rs  parser.rs  safety.rs  utf8.rs  wasm.rs  watch.rs
serializer/src/converters/: toon.rs
serializer/src/llm/: abbrev.rs  cache_generator.rs  convert.rs  human_formatter.rs  human_parser.rs  machine_zerocopy.rs  parser.rs  pretty_printer.rs  serializer.rs  serializer_output.rs  tokens.rs
serializer/src/machine/: compress.rs  footer.rs
serializer/tests/: battle_hardening_property_tests.rs  battle_hardening_tests.rs  converter_tests.rs  dx_format_spec.rs  dx_machine_brutal_test.rs  format_conversion_machine.rs  integration.rs  roundtrip_tests.rs  task_10_3_compact_syntax_serialization_props.rs  task_13_3_legacy_mode_props.rs  task_15_error_handling.rs  task_2_4_row_separator_props.rs  task_2_5_separator_autodetect_props.rs  task_3_1_schema_separator_test.rs  task_3_1_schema_serializer_test.rs  task_5_3_compact_syntax_props.rs  test_zstd.rs  zero_integration.rs
serializer/tests/property_tests/: binary_props.rs
tachyonfx/: .gitignore  CHANGELOG.md  Cargo.toml  DX.md  LICENSE  README.md  build-docs.sh  release-plz.toml  release.toml  rustfmt.toml  serve-docs.sh
tachyonfx/.github/workflows/: build.yml  release-plz.yml
tachyonfx/benches/: cell_filter.rs  cell_iteration.rs  color_conversion.rs  color_interpolation.rs  hsl_hsv_conversion.rs  lightness_adjustment.rs  math_functions.rs  parabolic_sin.rs  saturation_adjustment.rs
tachyonfx/docs/: dsl.md
tachyonfx/docs-assets/: doc-header.html
tachyonfx/examples/basic-effects/: Cargo.toml
tachyonfx/examples/common/: Cargo.toml
tachyonfx/examples/effect-registry/: Cargo.toml
tachyonfx/examples/effect-showcase/: Cargo.toml
tachyonfx/examples/minimal/: Cargo.toml
tachyonfx/examples/tweens/: Cargo.toml
tachyonfx/src/: bitvec.rs  bounding_box.rs  buffer_renderer.rs  cell_iter.rs  color_cache.rs  color_ext.rs  color_mapper.rs  color_space.rs  duration.rs  effect.rs  effect_manager.rs  effect_timer.rs  features.rs  interpolation.rs  lib.rs  lru_cache.rs  math.rs  motion.rs  rect_ext.rs  ref_rect.rs  render_effect.rs  shader.rs  simple_rng.rs  wave.rs
tachyonfx/src/cell_filter/: analyzer.rs  filter.rs  mod.rs  predicate.rs  processor.rs
tachyonfx/src/dsl/: arguments.rs  dsl.rs  dsl_format.rs  dsl_writer.rs  environment.rs  expr_promotion.rs  expressions.rs  method_chains.rs  mod.rs  parse_error.rs  token_parsers.rs  token_verification.rs  tokenizer.rs
tachyonfx/src/fx/: alpha_xform.rs  ansi256.rs  consume_tick.rs  containers.rs  direction.rs  dissolve.rs  dynamic_area.rs  evolve.rs  expand.rs  explode.rs  fade.rs  glitch.rs  hsl_shift.rs  lighten.rs  mod.rs  never_complete.rs  offscreen_buffer.rs  paint.rs  ping_pong.rs  prolong.rs  repeat.rs  resize.rs  run_once.rs  saturate.rs  shader_fn.rs  sleep.rs  slide.rs  sliding_window_alpha.rs  stretch.rs  sweep_in.rs  temporary.rs  translate.rs  translate_buffer.rs  unique.rs
tachyonfx/src/pattern/: any_pattern.rs  blend.rs  checkerboard.rs  coalesce.rs  combined.rs  diagonal.rs  diamond.rs  dissolve.rs  instanced_pattern.rs  inverted.rs  mod.rs  radial.rs  spiral.rs  sweep.rs  wave.rs
tachyonfx/src/widget/: effect_span.rs  mod.rs
toon/: Cargo.toml
toon/src/: lib.rs
toon/src/cli/: main.rs
tui/: .gitignore  .luarc.json  AGENTS.md  CODEX_INTEGRATION.md  CODEX_TUI_INTEGRATION.md  CONTRIBUTING.md  Cargo.toml  DX.md  HELP.md  LICENSE  PRODUCTION_READY.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  VERCEL_THEME.md  build.rs  clippy.toml  cspell.json  flake.nix
tui/.cargo/: config.toml
tui/.codex/: AGENTS.override.md  config.toml
tui/.github/: CODEX_SETUP.md
tui/assets/: yazi.desktop
tui/hexed/: CHANGELOG.md  CODEX_INTEGRATION_PLAN.md  CONTRIBUTING.md  DX.md  ERRORS.md  HELP.md  MENU.md  MENU_LIST.md  PROVIDERS.md  README.md  RESTRUCTURE_PLAN.md  RESTRUCTURE_VISUAL.md  TODO.md  TUI.md  UI_CHANGES.md  VERCEL_COLORS.md  VERCEL_THEME.md  WEB_LLM_PROVIDERS.md  extract_deps.ps1  extract_deps.rs  menu_render.rs  restructure.sh  themes.json  workspace_dependencies.toml
tui/nix/: shell.nix  yazi-unwrapped.nix  yazi.nix
tui/scripts/: add-dx-theme.js  build.sh  bump.sh  extract-tui-themes.js
tui/snap/: snapcraft.yaml
tui/src/: animations.rs  autocomplete.rs  bridge.rs  chat.rs  chat_components.rs  chat_input.rs  components.rs  dispatcher.rs  effects.rs  exit_animation.rs  font.rs  input.rs  llm.rs  logs.rs  main.rs  modal.rs  panic.rs  perf.rs  render.rs  root.rs  signals.rs  splash.rs  state.rs  theme.rs
tui/yazi-cli/: Cargo.toml
tui/yazi-fm/: Cargo.toml
(+1367 files in other folders)
