[package]
name = "wispr-flow"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async Runtime
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "sync"] }

# LLM
llama-cpp-2 = "0.1"

# Error Handling
anyhow = "1.0"

# System Info
sysinfo = "0.32"

# Audio Processing
hound = "3.5.1"
rodio = "0.22.2"
cpal = "0.17.3"

# Token counting
tiktoken-rs = "0.9"

# CLI detection
atty = "0.2.14"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
