[package]
name = "flow"
version = "0.1.0"
edition = "2024"
authors = ["Flow Contributors"]
description = "Open-source voice assistant with STT, LLM, and TTS - A WisprFlow alternative"
license = "Apache-2.0"
repository = "https://github.com/yourusername/flow"
keywords = ["voice", "assistant", "stt", "tts", "llm"]
categories = ["multimedia", "command-line-utilities"]

[dependencies]
# Async Runtime (Latest: 1.50.0 as of March 2026)
tokio = { version = "1.50", features = ["rt-multi-thread", "macros", "sync", "fs", "io-util"] }

# LLM Inference
llama-cpp-2 = "0.1"

# Tensor Operations
ndarray = "0.17"

# Audio Processing & FFT
hound = "3.5"
rodio = "0.22"
cpal = "0.17"
rustfft = "6.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# System Info
sysinfo = "0.32"

# Token Counting
tiktoken-rs = "0.9"

# CLI Detection
atty = "0.2"
espeak-rs = "0.1.9"
tokenizers = "0.22.2"
voice-g2p = "0.2.2"
kokoro-tiny = { version = "0.1.0", features = ["playback"] }

[lib]
name = "flow"
path = "src/lib.rs"

[[bin]]
name = "flow"
path = "src/main.rs"

[[example]]
name = "transcribe"
path = "examples/transcribe.rs"

[[example]]
name = "wispr_flow"
path = "examples/wispr_flow.rs"

[[bench]]
name = "benchmark"
path = "benches/benchmark.rs"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"

[dev-dependencies]
criterion = "0.8.2"
