[package]
name = "chat-minimal"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "chat"
path = "src/main.rs"

[dependencies]
# Terminal UI
ratatui = "0.29"
crossterm = "0.28"

# Async Runtime
tokio = { version = "1.42", features = ["full"] }

# LLM
llama-cpp-2 = "0.1"
sysinfo = "0.32"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# FIGlet fonts
dx-font = { path = "../font" }

# Animations
tachyonfx = { path = "../tachyonfx" }

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Clipboard
cli-clipboard = "0.4"

# FIGlet rendering
figlet-rs = "0.1"

# Token counting
tiktoken-rs = "0.9"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
