[package]
name = "dx-font"
version = "0.1.0"
edition = "2024"
description = "A comprehensive font search and download tool with access to 50k+ commercial-free fonts"
keywords = ["fonts", "typography", "download", "cli", "assets"]
categories = ["command-line-utilities", "multimedia", "web-programming"]

[features]
default = []
full = [
    "dep:tokio",
    "dep:reqwest",
    "dep:serde",
    "dep:serde_json",
    "dep:clap",
    "dep:indicatif",
    "dep:console",
    "dep:rayon",
    "dep:anyhow",
    "dep:thiserror",
    "dep:futures",
    "dep:async-trait",
    "dep:url",
    "dep:urlencoding",
    "dep:tokio-stream",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:scraper",
    "dep:regex",
    "dep:dirs",
    "dep:rand",
    "dep:zip",
]

[dependencies]
# NOTE: All dependencies are optional and only included with the "full" feature.
# By default, only the figlet module is available (no external dependencies).

# Async runtime
tokio = { version = "1.35", features = ["full"], optional = true }

# HTTP client
reqwest = { version = "0.12", features = [
    "json",
    "stream",
    "gzip",
    "brotli",
    "deflate",
], optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# CLI
clap = { version = "4.4", features = ["derive"], optional = true }

# Progress indicators
indicatif = { version = "0.17", optional = true }
console = { version = "0.15", optional = true }

# Parallel processing
rayon = { version = "1.8", optional = true }

# Error handling
anyhow = { version = "1.0", optional = true }
thiserror = { version = "1.0", optional = true }

# Async utilities
futures = { version = "0.3", optional = true }
async-trait = { version = "0.1", optional = true }

# URL handling
url = { version = "2.5", optional = true }
urlencoding = { version = "2.1", optional = true }

# File system
tokio-stream = { version = "0.1", optional = true }

# Logging
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# HTML parsing (for scraping font sites)
scraper = { version = "0.18", optional = true }

# Regex
regex = { version = "1.10", optional = true }

# Directory utilities
dirs = { version = "5.0", optional = true }

# Random number generation (for jitter in backoff)
rand = { version = "0.8", optional = true }

# Zip archive handling
zip = { version = "2.2", default-features = false, features = ["deflate", "bzip2", "zstd"], optional = true }

[dev-dependencies]
# Property-based testing
proptest = "1.4"

# Temporary files for testing
tempfile = "3.14"

# Async testing
tokio-test = "0.4"

# HTTP mocking
wiremock = "0.6"

# Benchmarking
criterion = { version = "0.5", features = ["async_tokio"] }

[[bin]]
name = "dx-font"
path = "src/main.rs"

[[bin]]
name = "test_download"
path = "test_download.rs"

[[example]]
name = "search_fonts"
path = "playground/search_fonts.rs"

[[example]]
name = "download_fonts"
path = "playground/download_fonts.rs"

[[example]]
name = "error_recovery"
path = "examples/error_recovery.rs"

[[example]]
name = "advanced_usage"
path = "examples/advanced_usage.rs"

[[bench]]
name = "parallel_search"
harness = false
