[package]
name = "dx-serializer"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"
description = "A token-efficient serialization format for LLM context windows with high-performance binary encoding"
keywords = ["serialization", "parser", "format", "performance", "zero-copy"]
categories = ["encoding", "parser-implementations", "asynchronous"]
readme = "README.md"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
name = "serializer"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
dx-serializer-derive = { path = "derive", optional = true }
bytemuck = { version = "1.18", features = ["derive"] }
rustc-hash = "1.1"
memchr = "2.7"
thiserror = "2.0"
indexmap = "2.7"
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.8", optional = true }
rkyv = { version = "0.8", features = ["bytecheck"] }
bincode = { version = "1.3", optional = true }

# Zstd compression (default, better than LZ4)
zstd = { version = "0.13", optional = true }

# LZ4 compression (optional, faster but less compression)
lz4_flex = { version = "0.11", optional = true }

# Parallel processing
rayon = { version = "1.10", optional = true }

# Token counting for LLM models
tiktoken-rs = { version = "0.6", optional = true }
tokenizers = { version = "0.21", optional = true }

# File watching
notify = { version = "6.1", optional = true }

# WASM bindings
wasm-bindgen = { version = "=0.2.106", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rkyv = { version = "0.8", features = ["bytecheck"] }
rkyv_derive = "0.8"
proptest = "1.4"
tempfile = "3.14"
bincode = "1.3"
postcard = { version = "1.0", features = ["alloc"] }
hex = "0.4"
ctor = "0.2"

[features]
default = ["converters", "compression"]
converters = ["serde", "serde_json", "serde_yaml", "toml", "bincode"]
wasm = ["wasm-bindgen", "console_error_panic_hook", "converters", "compression"]
compression = ["compression-zstd"]
compression-lz4 = ["lz4_flex"]
compression-zstd = ["zstd"]
watch = ["notify"]
parallel = ["rayon"]
tiktoken = ["tiktoken-rs"]
tokenizers-hf = ["tokenizers"]
token-counting = ["tiktoken", "tokenizers-hf"]
derive = ["dx-serializer-derive"]
full = ["converters", "compression", "watch", "token-counting", "derive", "parallel"]

[[bin]]
name = "dx-serialize"
path = "src/bin/serialize.rs"

[[bench]]
name = "dx_vs_rkyv_final"
harness = false

[[bench]]
name = "machine_format_perf"
harness = false

[[bench]]
name = "comprehensive"
harness = false
