[package]
name = "dx-serializer"
version = "0.5.0"
edition = "2024"
authors = [
    "Johann Schopplich <hello@johannschopplich.com>",
    "Shreyas K S <ks.shreyas0@gmail.com>",
]
license = "MIT"
description = "DX Serializer - Token-efficient serialization format for LLM prompts"
repository = "https://github.com/dx-serializer/dx-serializer-rust"
homepage = "https://dxserializer.dev"
documentation = "https://docs.rs/dx-serializer"
keywords = ["dx", "serializer", "llm", "token", "serialization"]
categories = ["encoding", "parser-implementations"]
readme = "README.md"

[[example]]
name = "examples"
path = "examples/main.rs"

[[bin]]
name = "dx-serializer"
path = "src/cli/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = []

[dependencies]
indexmap = "2.13.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
thiserror = "2.0.18"

[dev-dependencies]
datatest-stable = "0.3.3"
glob = "0.3"

[[test]]
name = "spec_fixtures"
harness = false
