[package]
name = "dx-serializer-derive"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"
description = "Derive macros for dx-serializer"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml = "0.9"

[dev-dependencies]
dx-serializer = { path = ".." }
