[package]
name                   = "yazi-fm"
description            = "Yazi file manager"
default-run            = "yazi"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default      = [ "vendored-lua", "llm" ]
vendored-lua = [ "mlua/vendored" ]
llm          = [ "llama-cpp-2", "tiktoken-rs", "sysinfo", "yazi-plugin/llm" ]

[dependencies]
yazi-actor    = { path = "../yazi-actor", version = "26.2.2" }
yazi-adapter  = { path = "../yazi-adapter", version = "26.2.2" }
yazi-binding  = { path = "../yazi-binding", version = "26.2.2" }
yazi-boot     = { path = "../yazi-boot", version = "26.2.2" }
yazi-config   = { path = "../yazi-config", version = "26.2.2" }
yazi-core     = { path = "../yazi-core", version = "26.2.2" }
yazi-dds      = { path = "../yazi-dds", version = "26.2.2" }
yazi-emulator = { path = "../yazi-emulator", version = "26.2.2" }
yazi-fs       = { path = "../yazi-fs", version = "26.2.2" }
yazi-macro    = { path = "../yazi-macro", version = "26.2.2" }
yazi-parser   = { path = "../yazi-parser", version = "26.2.2" }
yazi-plugin   = { path = "../yazi-plugin", version = "26.2.2" }
yazi-proxy    = { path = "../yazi-proxy", version = "26.2.2" }
yazi-shared   = { path = "../yazi-shared", version = "26.2.2" }
yazi-term     = { path = "../yazi-term", version = "26.2.2" }
yazi-tty      = { path = "../yazi-tty", version = "26.2.2" }
yazi-vfs      = { path = "../yazi-vfs", version = "26.2.2" }
yazi-watcher  = { path = "../yazi-watcher", version = "26.2.2" }
yazi-widgets  = { path = "../yazi-widgets", version = "26.2.2" }

# LLM (enabled by default via llm feature)
llama-cpp-2 = { version = "0.1", optional = true }
sysinfo = { version = "0.32", optional = true }
tiktoken-rs = { version = "0.9", optional = true }

# Font compression
zstd = "0.13"
once_cell = "1.20"

# Animations
tachyonfx = { path = "../../tachyonfx" }

# Color/palette for effects
palette = "0.7"
rand = "0.8"

# Clipboard
cli-clipboard = "0.4"

# FIGlet rendering
figlet-rs = "0.1"

# Time
chrono = "0.4"

# External dependencies
anyhow             = { workspace = true }
better-panic       = "0.3.0"
crossterm          = { workspace = true }
fdlimit            = "0.3.0"
futures            = { workspace = true }
mlua               = { workspace = true }
paste              = { workspace = true }
ratatui            = { workspace = true }
scopeguard         = { workspace = true }
tokio              = { workspace = true }
tokio-stream       = { workspace = true }
tracing            = { workspace = true }
tracing-appender   = "0.2.4"
tracing-subscriber = { version = "0.3.23", features = [ "env-filter" ] }

[target."cfg(unix)".dependencies]
libc              = { workspace = true }
signal-hook-tokio = { version = "0.4.0", features = [ "futures-v0_3" ] }

[target.'cfg(target_os = "macos")'.dependencies]
crossterm = { workspace = true, features = [ "use-dev-tty", "libc" ] }

[target.'cfg(all(not(target_os = "macos"), not(target_os = "windows")))'.dependencies]
tikv-jemallocator = "0.6.1"

[build-dependencies]
zstd = "0.13"

[[bin]]
name = "yazi"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{repo}/releases/download/v{version}/yazi-{target}{archive-suffix}"
bin-dir = "yazi-{target}/{bin}{binary-ext}"
