[package]
name = "fb-actor"
description            = "Yazi actor model"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default      = [ "vendored-lua" ]
vendored-lua = [ "mlua/vendored" ]

[dependencies]
fb-binding = { path = "../binding", version = "26.2.2" }
fb-boot = { path = "../boot", version = "26.2.2" }
fb-config = { path = "../config", version = "26.2.2" }
fb-core = { path = "../core", version = "26.2.2" }
fb-dds = { path = "../dds", version = "26.2.2" }
fb-emulator = { path = "../emulator", version = "26.2.2" }
fb-fs = { path = "../fs", version = "26.2.2" }
fb-macro = { path = "../macro", version = "26.2.2" }
fb-parser = { path = "../parser", version = "26.2.2" }
fb-plugin = { path = "../plugin", version = "26.2.2" }
fb-proxy = { path = "../proxy", version = "26.2.2" }
fb-scheduler = { path = "../scheduler", version = "26.2.2" }
fb-shared = { path = "../shared", version = "26.2.2" }
fb-term = { path = "../term", version = "26.2.2" }
fb-tty = { path = "../tty", version = "26.2.2" }
fb-vfs = { path = "../vfs", version = "26.2.2" }
fb-watcher = { path = "../watcher", version = "26.2.2" }
fb-widgets = { path = "../widgets", version = "26.2.2" }

# External dependencies
anyhow       = { workspace = true }
crossterm    = { workspace = true }
either       = { workspace = true }
futures      = { workspace = true }
hashbrown    = { workspace = true }
mlua         = { workspace = true }
paste        = { workspace = true }
ratatui      = { workspace = true }
scopeguard   = { workspace = true }
tokio        = { workspace = true }
tokio-stream = { workspace = true }
tracing      = { workspace = true }

[target."cfg(unix)".dependencies]
libc = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
crossterm = { workspace = true, features = [ "use-dev-tty", "libc" ] }

