[package]
name = "fb-binding"
description            = "Yazi Lua bindings"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default      = [ "vendored-lua" ]
vendored-lua = [ "mlua/vendored" ]

[dependencies]
fb-adapter = { path = "../adapter", version = "26.2.2" }
fb-codegen = { path = "../codegen", version = "26.2.2" }
fb-config = { path = "../config", version = "26.2.2" }
fb-fs = { path = "../fs", version = "26.2.2" }
fb-macro = { path = "../macro", version = "26.2.2" }
fb-shared = { path = "../shared", version = "26.2.2" }
fb-vfs = { path = "../vfs", version = "26.2.2" }
fb-widgets = { path = "../widgets", version = "26.2.2" }

# External dependencies
ansi-to-tui   = { workspace = true }
anyhow        = { workspace = true }
crossterm     = { workspace = true }
futures       = { workspace = true }
hashbrown     = { workspace = true }
mlua          = { workspace = true }
paste         = { workspace = true }
ratatui       = { workspace = true }
serde_json    = { workspace = true }
tokio  	      = { workspace = true }
tokio-stream  = { workspace = true }
tracing       = { workspace = true }
unicode-width = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
crossterm = { workspace = true, features = [ "use-dev-tty", "libc" ] }

