[package]
name = "fb-config"
description            = "Yazi configuration file parser"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
fb-codegen = { path = "../codegen", version = "26.2.2" }
fb-fs = { path = "../fs", version = "26.2.2" }
fb-macro = { path = "../macro", version = "26.2.2" }
fb-shared = { path = "../shared", version = "26.2.2" }
fb-tty = { path = "../tty", version = "26.2.2" }

# External dependencies
anyhow    = { workspace = true }
bitflags  = { workspace = true }
crossterm = { workspace = true }
globset   = { workspace = true }
hashbrown = { workspace = true }
indexmap  = { workspace = true }
ratatui   = { workspace = true }
regex     = { workspace = true }
serde     = { workspace = true }
tokio     = { workspace = true }
toml      = { workspace = true }
tracing   = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
crossterm = { workspace = true, features = [ "use-dev-tty", "libc" ] }

